--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,14 +4,12 @@ nixPkgs = ["nodejs_20"]
 [phases.install]
 cmds = [
   "cd backend && npm ci",
-  "cd frontend && npm ci",
   "cd backend && npx prisma generate"
 ]
 
 [phases.build]
 cmds = [
-  "cd backend && npm run build",
-  "cd frontend && npm run build"
+  "cd backend && npm run build"
 ]
 
 [start]
